# shutdown-timer

./: BUILD_REPORT.md  DECOMPILATION_REPORT.md  EXE_INSTRUCTIONS.md  MANIFEST.in  QUICK_START.md  README.md  README_EN.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.0_EN.md  TRAY_FEATURES.md  VERSION_2.1_CHANGES.md  build_exe.py  build_instructions.md  pyproject.toml  requirements.txt  requirements_tray.txt  shutdown_timer_2.0.py  shutdown_timer_2.4.py  shutdown_timer_2.4_backup_final.py  shutdown_timer_embedded.py  shutdown_timer_embedded_1.py  test_tray.py
