[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shutdown-timer"
version = "2.0.0"
description = "A stylish system shutdown timer with terminal-like interface"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pukdev", email = "pukdev@github.com"}
]
maintainers = [
    {name = "pukdev", email = "pukdev@github.com"}
]
keywords = ["shutdown", "timer", "system", "windows", "terminal", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/pukdev/shutdown-timer"
Repository = "https://github.com/pukdev/shutdown-timer"
Documentation = "https://github.com/pukdev/shutdown-timer#readme"
"Bug Tracker" = "https://github.com/pukdev/shutdown-timer/issues"

[project.scripts]
shutdown-timer = "shutdown_timer_embedded:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.ico", "*.png", "screenshots/*"]
